# DapoMaster

./: AI_PROMPT_PENGEMBANGAN.md  DAFTAR_TABEL_DATABASE.md  FITUR_NAIK_KELAS.md  FIX_TYPE_MISMATCH.md  FIX_UPDATER_ID.md  FIX_VALIDASI_COMMANDS.md  PERBAIKAN_SISTEM_VALIDASI.md  RINGKASAN_PROYEK.md  man_akses_tables.txt  nilai_tables.txt  package-lock.json  package.json  ref_tables.txt  schema_list.txt  tabel_list.txt  vite.config.ts
.cursor/rules/: aturan-bahasa-indonesia.mdc  best-practice.mdc  otomatisasi-terminal.mdc  stack-tauri.mdc  version-control.mdc
erd/: pendataan - public.erd  pendataan_audit.erd  pendataan_blob.erd  pendataan_information_schema.erd  pendataan_man_akses.erd  pendataan_nilai.erd  pendataan_pg_catalog.erd  pendataan_pustaka.erd  pendataan_ref.erd
public/: splash.html
src/: App.tsx  SplashScreen.tsx  main.tsx  splash.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  setup.rs  tricky_method.rs
src-tauri/src/commands/: dashboard.rs  export.rs  keluar.rs  lulusan.rs  mod.rs  naik_kelas.rs  pengguna.rs  referensi.rs  siswa.rs  validasi.rs  validasi.rs.backup
src/components/: DashboardView.tsx  KeluarView.tsx  LogPanel.tsx  LulusanView.tsx  Modal.tsx  NaikKelasView.tsx  PemilihanPenggunaView.tsx  Sidebar.tsx  SiswaForm.tsx  SiswaView.tsx  ValidasiView.tsx
