[package]
name = "dapomaster"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dapomaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = "2"
is_elevated = "0.1"
bigdecimal = { version = "0.3.1", features = ["serde"] }
rand = "0.8"
filetime = "0.2.25"
sysinfo = "0.36.1"
wait-timeout = "0.2"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Tambahkan fitur v4 untuk Uuid::new_v4()
    "serde",             # Untuk serialisasi/deserialisasi
    "fast-rng",          # RNG yang lebih cepat (disarankan oleh crate `uuid`)
    "macro-diagnostics", # Pesan error yang lebih baik
]

